--- a/packages/styleguide/src/css/light-mode.css
+++ b/packages/styleguide/src/css/light-mode.css
@@ -292,6 +292,9 @@
   --gw-message-help-color: var(--gw-help-dark);
   --gw-tag-success-background: var(--gw-success-lighter);
   --gw-tag-success-color: var(--gw-success-base);
+  --gw-select-background: var(--gw-form-field-background);
+  --gw-select-border-color: var(--gw-form-field-border-color);
+  --gw-select-dropdown-color: var(--gw-form-field-icon-color);
   --gw-editor-toolbar-numbers-color: var(--gw-default-muted-color);
   --gw-editor-content-color: var(--gw-default-color);
   --gw-inputgroup-addon-background: var(--gw-form-field-background);
@@ -319,6 +322,7 @@
   --gw-toast-success-color: var(--gw-primary-contrast-color);
   --gw-autocomplete-option-color: var(--gw-list-option-color);
   --gw-message-success-border-color: var(--gw-default-success-light-background);
+  --gw-select-option-color: var(--gw-list-option-color);
   --gw-listbox-option-selected-focus-background: var(--gw-list-option-selected-focus-background);
   --gw-listbox-option-selected-focus-color: var(--gw-list-option-selected-focus-color);
   --gw-listbox-option-selected-color: var(--gw-list-option-selected-color);
